After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 607132 - Regions not translated in the geography activity
Regions not translated in the geography activity
Status: RESOLVED FIXED
Product: gcompris
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Bruno Coudoin
Rami Aubourg-Kaires
Depends on:
Blocks:
 
 
Reported: 2010-01-16 06:47 UTC by F Wolff
Modified: 2010-01-16 23:00 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description F Wolff 2010-01-16 06:47:37 UTC
When hovering the mouse over the "pieces" on the left in the geography activity, the name is shown at the bottom. Although these strings are translated in the .mo file, the translated names are not shown.

As a specific example, I expected the names like "Africa" and "Europe" to show the Afrikaans translation from the .mo file (Afrika, Europa).

When moving to level two (North America), the name at the bottom right of the screen is shown translated as "Noord-Amerika".

(Tested version 9 on the upcoming Ubuntu 10.04)
Comment 1 Bruno Coudoin 2010-01-16 23:00:12 UTC
Fixed in gcomprixogoo 0206fba