Added translation on tooltips in the geography activity.

This fixes bug:
http://bugzilla.gnome.org/show_bug.cgi?id=607132