src/babymatch-activity/shapegame.c
@@ -1104,7 +1104,7 @@ item_event(GooCanvasItem *item, GooCanvasItem *target,
     case GDK_ENTER_NOTIFY:
       if(shape->tooltip) {
 	g_object_set(tooltip_text_item,
-		     "text", shape->tooltip,
+		     "text", gettext(shape->tooltip),
 		     NULL);
 	g_object_set (tooltip_root_item, "visibility", GOO_CANVAS_ITEM_VISIBLE, NULL);
 
